# LMlang

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
AST_Vlad_version/: AST.cpp  AST.h
AntlrLexerParser/: pom.xml
LMLang_benchmarks/: TODO  factorial.lm.btc  last_bench.lm  last_bench.lm.btc  prime_numbers.lm  prime_numbers.lm.btc  primitive.lm  primitive.lm.btc  primitive1.lm  primitive1.lm.btc  primitive2.lm  primitive2.lm.btc  primitive3.lm  primitive3.lm.btc  primitive4.lm  primitive4.lm.btc  sort.lm  sort.lm.btc  tree.lm
Mapper/: bytecode.h  bytecodeHolder.h  mapper.cpp  mapper.h  opCode.h
antlr4/: CharStream.h  DefaultErrorStrategy.cpp  DefaultErrorStrategy.h  DiagnosticErrorListener.cpp  FailedPredicateException.cpp  LexerInterpreter.h  LexerNoViableAltException.cpp  LexerNoViableAltException.h  NoViableAltException.h  Parser.cpp  ParserRuleContext.cpp  ParserRuleContext.h  RecognitionException.cpp  TokenStreamRewriter.cpp  UnbufferedTokenStream.cpp  antlr4-runtime.h
antlr4/atn/: ATN.cpp  ATNConfig.cpp  ATNConfig.h  ATNConfigSet.h  ATNDeserializer.h  ATNState.cpp  ATNState.h  ATNStateType.cpp  AmbiguityInfo.h  BasicBlockStartState.h  DecisionEventInfo.h  DecisionState.cpp  LexerAction.h  LexerActionExecutor.h  LexerActionType.h  LexerCustomAction.cpp  LexerIndexedCustomAction.cpp  LexerIndexedCustomAction.h  LexerSkipAction.cpp  ParserATNSimulator.cpp  ParserATNSimulator.h  PredictionContext.cpp  PredictionContextCache.cpp  PredictionContextMergeCache.h  ProfilingATNSimulator.cpp  RangeTransition.h  RuleStartState.h  RuleStopState.h  RuleTransition.cpp  SemanticContextType.h  SetTransition.h  SingletonPredictionContext.cpp  StarBlockStartState.h  StarLoopbackState.h  TokensStartState.h  Transition.h  TransitionType.h  WildcardTransition.h
antlr4/dfa/: DFA.cpp  DFAState.h
antlr4/internal/: Synchronization.cpp
antlr4/misc/: InterpreterDataReader.h  Interval.h  IntervalSet.h
antlr4/support/: Any.h  Arrays.cpp  BitSet.h  CPPUtils.cpp  StringUtils.cpp  StringUtils.h  Utf8.h
antlr4/tree/: ErrorNodeImpl.h  IterativeParseTreeWalker.cpp  IterativeParseTreeWalker.h  ParseTree.h  ParseTreeListener.h  Trees.cpp
antlr4/tree/pattern/: Chunk.h  ParseTreePattern.cpp  ParseTreePattern.h  ParseTreePatternMatcher.cpp  RuleTagToken.cpp  RuleTagToken.h  TagChunk.cpp  TextChunk.cpp  TokenTagToken.cpp
antlr4/tree/xpath/: XPath.h  XPathElement.cpp  XPathLexer.h  XPathLexerErrorListener.h  XPathRuleElement.cpp  XPathWildcardElement.cpp
benchmarks/: factorial.lm  factorial.lm.btc  last_bench.lm  last_bench.lm.btc  prime_numbers.lm  prime_numbers.lm.btc  primitive.lm  primitive.lm.btc  primitive1.lm  primitive1.lm.btc  primitive2.lm  primitive2.lm.btc  primitive3.lm  primitive3.lm.btc  primitive4.lm  primitive4.lm.btc  sort.lm  sort.lm.btc
bytecode/: bytecode.h  bytecodeHolder.h  command.h  mapper.h  parsedCommand.h
bytecodeGenerator/: byteCodeGener.cpp  byteCodeGener.h  bytecode.cpp  bytecode.h
codeRunner/: CodeRunner.cpp  CodeRunner.h
gcMemoryManager/: gcMemoryManager.cpp  gcMemoryManager.h
grammar/: ASTBuilder.cpp  ASTBuilder.h  ASTNode.h  CustomErrorListener.cpp  CustomErrorListener.h  LMlangGrammar.g4  LMlangGrammar.interp  LMlangGrammar.tokens  LMlangGrammarBaseListener.cpp  LMlangGrammarBaseListener.h  LMlangGrammarBaseVisitor.cpp  LMlangGrammarBaseVisitor.h  LMlangGrammarLexer.cpp  LMlangGrammarLexer.h  LMlangGrammarLexer.interp  LMlangGrammarLexer.tokens  LMlangGrammarListener.cpp  LMlangGrammarListener.h  LMlangGrammarParser.cpp  LMlangGrammarParser.h  LMlangGrammarVisitor.cpp  LMlangGrammarVisitor.h
helpersForBenchmarks/: random_numbers.txt
lib/antlr4/: ANTLRInputStream.cpp  BufferedTokenStream.cpp  CommonToken.cpp  CommonTokenFactory.cpp  Lexer.cpp  LexerInterpreter.cpp  Parser.h  ParserInterpreter.cpp  ParserInterpreter.h  Recognizer.cpp  Recognizer.h  RuleContext.cpp  RuleContext.h  RuleContextWithAltNum.cpp  UnbufferedCharStream.cpp  antlr4-common.h
lib/antlr4/atn/: ATN.h  ATNConfigSet.cpp  ATNDeserializationOptions.cpp  ATNDeserializationOptions.h  ATNDeserializer.cpp  ATNSimulator.cpp  ATNSimulator.h  ATNStateType.h  ATNType.h  ArrayPredictionContext.cpp  AtomTransition.cpp  EpsilonTransition.cpp  LL1Analyzer.cpp  LL1Analyzer.h  ParseInfo.cpp  (+30 more)
untitled/: build.gradle.kts
vm/: vm.cpp  vm.h  vm2.cpp  vm2.h
(+117 files in other folders)
